<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Polyshift</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_polyshift">PolyshiftActivity</string>
    <string name="title_poly_shift">PolyShift</string>
    <string name="login">Login</string>
    <string name="signup">Registrieren</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="title_activity_main">Yuome</string>
    <string name="title_activity_signup">Registrieren</string>
    <string name="repeat_password">Passwort wiederholen</string>
    <string name="logo">Yuome logo</string>
    <string name="name">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="email">E-Mail</string>
    <string name="new_opponent">Neuer Gegner</string>
    <string name="forward">weiter</string>
    <string name="contacts_new_textfield_username">Benutzername</string>
    <string name="opponents_attending_title">Neuer Gegner</string>
    <string name="dialog_opponent_handling">Spiel startet</string>
    <string name="opponent_confirm">bestätigen</string>
    <string name="opponent_decline">ablehnen</string>
    <string name="new_game">Neues Spiel</string>

</resources>
