<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#338A30"
    tools:context=".SignupActivity" >

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/EditUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Logo"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:textColorHint="#d6e7d5" />

    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditUsername"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#d6e7d5" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditPassword"
        android:text="@string/login" />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/LoginButton"
        android:layout_below="@id/EditPassword"
        android:onClick="userSignup"
        android:text="@string/signup" />  

    <TextView
        android:id="@+id/debug"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SignupButton"
        android:text="" />

</RelativeLayout>